Test/git-issues/git-issue-1604b.dfy.expect
git-issue-1604b.dfy(56,38): Error: 'c' has been lately inferred to be of the subset type GhostEvenCell which has a non-compilable constraint, which prevents this set comprehension of Cell to be compiled. If you really want the verifier to check it, please explicitely annotate the bound variable (c: GhostEvenCell). The next error will explain why the constraint is not compilable.
git-issue-1604b.dfy(10,31): Error: predicate calls are allowed only in specification contexts (consider declaring the predicate a 'predicate method')
git-issue-1604b.dfy(60,38): Error: 'c' has been lately inferred to be of the subset type GhostEvenCell which has a non-compilable constraint, which prevents this set comprehension of Cell to be compiled. If you really want the verifier to check it, please explicitely annotate the bound variable (c: GhostEvenCell). The next error will explain why the constraint is not compilable.
git-issue-1604b.dfy(10,31): Error: predicate calls are allowed only in specification contexts (consider declaring the predicate a 'predicate method')
4 resolution/type errors detected in git-issue-1604b.dfy
